--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hopecommunityfellowship.org"
+baseURL = "https://hope-community-fellowship.github.io/hopecommunityfellowship.org/"
 languageCode = "en-us"
 title = "Hope Community Fellowship"
 theme = "alpha-church"
